--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.2",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "@next/font": "13.1.1",
+    "axios": "^1.2.2",
+    "eslint-config-next": "13.1.1",
+    "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "tailwind-scrollbar": "^2.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
