--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.1.2",
     "@next/font": "13.1.1",
     "axios": "^1.2.2",
     "eslint-config-next": "13.1.1",
