added extension of babel next/babel

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,13 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "next/core-web-vitals", "next"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "next/core-web-vitals",
+    "next",
+    "next/babel"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
